# django-mail-factory

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.rst  VERSION  setup.cfg  setup.py  tox.ini
.github/: release-drafter.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
demo/: settings.py  urls.py  wsgi.py
demo/demo/: settings.py  urls.py
demo/demo/comments/: mails.py
demo/demo/comments/mails/: previews.py
demo/demo/comments/templates/mails/comments/: base.html  body.html
demo/demo/demo_app/: mails.py  models.py
demo/demo/demo_app/templates/mails/article_by_mail/: body.html  body.txt  subject.txt
demo/demo/demo_app/templates/mails/no_custom/: body.txt
demo/demo_app/: mails.py
demo/demo_app/templates/mails/custom_form/: body.html  subject.txt
demo/demo_app/templates/mails/custom_form/fr/: body.html  body.txt
docs/: Makefile
docs/source/: api.rst  conf.py  django.rst  index.rst  interface.rst  template.rst
mail_factory/: __init__.py  app_no_autodiscover.py  apps.py  exceptions.py  factory.py  forms.py  mails.py  messages.py  models.py  previews.py  tests.py  urls.py  views.py
mail_factory/contrib/auth/: forms.py  mails.py  views.py
mail_factory/templates/mail_factory/: base.html  detail.html  form.html  html_not_found.html  list.html  preview_message.html
mail_factory/templates/mails/test_no_html/: body.txt
mail_factory/templates/mails/test_no_txt/: body.html  subject.txt
mail_factory/templates/mails/test_no_txt/fr/: body.html
mail_factory/tests/: __init__.py  test_contrib.py  test_factory.py  test_forms.py  test_mails.py  test_messages.py  test_views.py
requirements/: test.txt
(+3 files in other folders)
