[metadata]
name = django-mail-factory
description = Django Mail Manager
url = https://github.com/peopledoc/django-mail-factory
author = PeopleDoc
license = BSD
long_description = file: README.rst
version = file: VERSION
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires =
    django
    html2text

[options.extras_require]
dev =
    black
    isort
    flake8
    pytest
    pytest-cov
    pytest-django
    tox
    sphinx
    doc8

[options.packages.find]
include =
    mail_factory
    mail_factory.*

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=mail_factory -vv --strict-markers -rfE
testpaths =
    mail_factory/tests/
filterwarnings =
    error
    # Ignoring for now: RemovedInDjango50Warning
    ignore:.*The USE_L10N setting is deprecated.*

DJANGO_SETTINGS_MODULE = demo.settings

[doc8]
ignore = D001

[wheel]
universal = 1

[isort]
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
known_django=django
known_firstparty=mail_factory
profile = black

[flake8]
ignore = E501,E402
